<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="josn_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    
    
    <string name="app_name">有乐窝</string>
    <string name="name_talk">吐槽</string>
    <string name="name_article">文章</string>
    <string name="name_blog">博客</string>
    <string name="name_wowo">窝窝</string>
    <string name="name_user">我的资料</string>
    <string name="name_more">更多</string>
    
    <string name="show_article">文章正文</string>
    <string name="show_blog">博客正文</string>
    <string name="request_timeout">请求网络超时</string>
    <string name="loading">加载中......</string>
    <string name="loadmore">加载更多......</string>
    <string name="wowo_username">创建者:</string>
    <string name="wowo_membercount">成员:</string>
    <string name="wowo_articlecount">文章:</string>
    <string name="wowo_createtime">创建于:</string>
    <string name="wowo_todypost">今日发表:</string>
    <string name="exit">退出</string>
    <string name="userinfo">正在开发中，敬请期待...</string>
    <string name="login_username">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_username_p">请输入帐号</string>
     <string name="login_password_p">请输入密码</string>
    <string name="login_submit">登录</string>
    <string name="back">返&#160;&#160;回</string>
    <string name="recomment_tit">跟帖</string>
    <string name="recomment_tit_web">网友跟帖</string>
    <string name="rename">回复</string>
    <string name="cancel">取消</string>
    <string name="maohao">:</string>
   	<string name="msg_login_error">登陆失败</string>
   	<string name="jointime">加入时间：</string>
   	 <string name="age">年龄：</string>
    <string name="work">职业：</string>
    <string name="address">地址：</string>
    <string name="mark">积分：</string>
    <string name="characters">签名：</string>
    <string name="loginfaill">用户名或密码错误</string>
    <string name="pleaselogin">请先登录</string>
    <string name="noname">用户名不能为空</string>
    <string name="nopassword">密码不能为空</string>
    <string name="nocontent">回复内容不能为空</string>
    <string name="contenttoolong">回复内容不能超过500字符</string>
    <string name="latstversion">已经是最新版本了</string>
    <string name="send">发送</string>
    <string name="posttalk">发布吐槽</string>
    <string name="choose_image">请选择图片</string>
   	<string name="delete_image">确定删除该图片吗？</string>
   	<string name="sure">确定</string>
    <string name="cancle">取消</string>
    <!-- 更多 -->
    <string name="logout">注销登录</string>
    <string name="check_new_version">检测新版本</string>
    <string name="about">关于</string>
    <string name="exitprogram">退出程序</string>
    <string name="about_appname">有乐窝移动客户端</string>
    <string name="about_version">版本：1.0</string>
    <string name="about_role">2011-2013 ulewo.com 有乐窝 All rights reserved</string>
</resources>
