<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabhost">
    <LinearLayout  
        android:orientation="vertical"
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"
        android:background="@color/white"> 
		<FrameLayout  
			android:id="@android:id/tabcontent"  
			android:layout_width="fill_parent"  
			android:layout_height="fill_parent"  
			android:layout_weight="1.0">
		</FrameLayout>
		<TabWidget  
			android:id="@android:id/tabs"  
			android:layout_alignParentBottom="true"  
			android:layout_width="fill_parent"  
			android:layout_height="50px"   
			android:visibility="gone"  
			android:layout_weight="0.0"/>  
        <RadioGroup 
        	android:layout_width="fill_parent"  
        	android:layout_height="wrap_content" 
        	android:background="@drawable/widget_bar_bg_n"
        	android:layout_gravity="bottom"
        	android:gravity="center_vertical"  
            android:orientation="horizontal"
            android:id="@+id/group_id">
        	<RadioButton 
        		android:id="@+id/radio_article_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/article"
				android:text="@string/name_article"/>
			<RadioButton
				android:id="@+id/radio_blog_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/blog"
				android:text="@string/name_blog"/>	
			<RadioButton 
				android:id="@+id/radio_wowo_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/wowo"
				android:text="@string/name_wowo"/>
			 <RadioButton 
        		android:id="@+id/radio_talk_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/talk"
				android:text="@string/name_talk"/>  	
			<RadioButton 
				android:id="@+id/radio_user_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/user"
				android:text="@string/name_user"/>	
			<RadioButton 
				android:id="@+id/radio_more_id"
				style="@style/main_footbar_radio"
				android:drawableTop="@drawable/more"
				android:text="@string/name_more"/>	
        </RadioGroup>
    </LinearLayout>  
</TabHost>
