<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   	<include layout="@layout/common_head"/>
  	<LinearLayout 
  		android:id="@+id/loginlayout"
  		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="center"
    	android:visibility="visible">
    	<RelativeLayout 
  		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	style="@style/login_text_con">
	    	<TextView 
	    	 	android:text="@string/login_username"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:id="@+id/login_username_text"
	    		style="@style/login_text_title"/>
	    	<EditText   
			  	android:id="@+id/login_username"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_toRightOf="@id/login_username_text" 
			    style="@style/login_textinput"/>  
    	</RelativeLayout>
    	<RelativeLayout 
	  		android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	style="@style/login_text_con">
	    	<TextView 
	    		android:id="@+id/login_username_text"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:text="@string/login_password"
	    		style="@style/login_text_title"/>
	    	<EditText  
			  	android:id="@+id/login_password"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_toRightOf="@id/login_username_text" 
			     style="@style/login_textinput"/>  
	    </RelativeLayout>
    	<Button 
    		android:id="@+id/login_submit"
    		android:layout_margin="10dp"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/login_submit"
    		style="@style/login_submitbtn"/>
  	</LinearLayout>
  	<include layout="@layout/userinfo"/>
</LinearLayout>
