<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">
   	<include layout="@layout/common_head"/>
   	<RelativeLayout 
   	    android:id="@+id/more_logout"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	style="@style/about_item"
    	android:layout_marginTop="10dp"
    	android:focusable="true" 
	    android:clickable="true"
    	android:background="@drawable/table_above_bg">
    	<TextView
    		android:id="@+id/about_logout" 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/logout"
    		android:textColor="@color/black"
    		android:padding="10dp"/>
    	<ImageView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:src="@drawable/mail_sender_btn_arrow"
    		android:layout_marginTop="5dp"
    		android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/more_check_version" 
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	style="@style/about_item"
    	android:focusable="true" 
	    android:clickable="true"
    	android:background="@drawable/table_mid_bg">
    	<TextView
    		android:id="@+id/about_logout" 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/check_new_version"
    		android:textColor="@color/black"
    		android:padding="10dp"/>
    	<ImageView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:src="@drawable/mail_sender_btn_arrow"
    		android:layout_marginTop="5dp"
    		android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/more_about_item"
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	style="@style/about_item"
    	android:focusable="true" 
	    android:clickable="true"
    	android:background="@drawable/table_mid_bg">
    	<TextView
    		android:id="@+id/about" 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/about"
    		android:textColor="@color/black"
    		android:padding="10dp"/>
    	<ImageView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:src="@drawable/mail_sender_btn_arrow"
    		android:layout_marginTop="5dp"
    		android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/more_exit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/about_item"
		android:focusable="true" 
	 	android:clickable="true"
		android:background="@drawable/table_below_bg">
	<TextView
		android:id="@+id/exitprogram" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/exitprogram"
		android:textColor="@color/black"
		android:padding="10dp"/>
	<ImageView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:src="@drawable/mail_sender_btn_arrow"
		android:layout_marginTop="5dp"
		android:layout_marginRight="10dp"/>
</RelativeLayout>
</LinearLayout>
