<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
<RelativeLayout 
	android:id="@+id/logindialog_space" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
    <ScrollView 
    	android:id="@+id/login_scrollview" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_centerInParent="true"
    	android:paddingTop="14.0dip" 
    	android:paddingLeft="14.0dip" 
    	android:paddingRight="14.0dip" 
    	android:scrollbars="none" >
        <ViewSwitcher 
        	android:id="@+id/logindialog_view_switcher" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content">
            <RelativeLayout 
            	android:layout_width="fill_parent" 
            	android:layout_height="fill_parent"
            	android:background="@drawable/login_bg" 
            	android:paddingTop="30.0dip"
            	android:paddingBottom="20.0dip" >
                <TableLayout 
	                android:orientation="vertical" 
	                android:id="@+id/login_user_table" 
	                android:layout_width="fill_parent" 
	                android:layout_height="wrap_content" 
	                android:layout_marginTop="10.0dip" 
	                android:layout_marginLeft="15.0dip" 
	                android:layout_marginRight="15.0dip" 
	                android:layout_centerHorizontal="true"
	                android:background="@drawable/login_user_table_bg" >
                    <LinearLayout 
                    	android:id="@+id/login_uly"
                     	android:layout_width="fill_parent" 
                     	android:layout_height="wrap_content">
                        <TextView 
	                         android:layout_width="wrap_content" 
	                         android:layout_height="wrap_content" 
	                         android:layout_marginLeft="8.0dip" 
	                         android:layout_marginTop="10.0dip" 
	                         android:textSize="@dimen/size_16" 
	                         android:textStyle="bold" 
	                         android:textColor="@color/black" 
	                         android:text="@string/login_username" />
                        <EditText 
	                         android:id="@+id/login_account" 
	                         android:layout_width="fill_parent" 
	                         android:layout_height="wrap_content" 
	                         android:layout_marginTop="10.0dip" 
	                         android:layout_marginLeft="8.0dip" 
	                         android:layout_marginRight="8.0dip" 
	                         android:background="@null" 
	                         android:hint="@string/login_username_p" 
	                         android:textSize="@dimen/size_12" 
	                         android:maxLines="1" 
	                         android:singleLine="true" 
	                         android:selectAllOnFocus="true" 
	                         android:inputType="textEmailAddress" />
                    </LinearLayout>
                    <ImageView 
	                    android:layout_width="fill_parent" 
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="12.0dip" 
	                    android:layout_marginLeft="2.0dip" 
	                    android:layout_marginRight="2.0dip" 
	                    android:src="@drawable/login_line" 
	                    android:scaleType="fitXY" />
                    <LinearLayout 
	                    android:layout_width="fill_parent" 
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="10.0dip">
                        <TextView 
	                        android:layout_width="wrap_content" 
	                        android:layout_height="wrap_content" 
	                        android:layout_marginLeft="8.0dip" 
	                        android:textSize="@dimen/size_16" 
	                        android:textStyle="bold" 
	                         android:textColor="@color/black" 
	                        android:text="@string/login_password" />
                        <EditText 
	                        android:id="@+id/login_password" 
	                        android:layout_width="fill_parent" 
	                        android:layout_height="wrap_content" 
	                        android:layout_marginLeft="8.0dip" 
	                        android:layout_marginRight="8.0dip" 
	                        android:textSize="@dimen/size_12" 
	                        android:background="@null" 
	                        android:hint="@string/login_password_p" 
	                        android:maxLines="1" 
	                        android:password="true" 
	                        android:singleLine="true" 
	                        android:selectAllOnFocus="true" />
                    </LinearLayout>
                </TableLayout>
                <TableLayout 
	                android:orientation="vertical" 
	                android:layout_width="fill_parent" 
	                android:layout_height="wrap_content" 
	                android:layout_below="@+id/login_user_table" 
	                android:layout_alignLeft="@+id/login_user_table" 
	                android:layout_alignRight="@+id/login_user_table"
	                android:stretchColumns="0,2" >
                    <LinearLayout 
	                    android:layout_width="fill_parent" 
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="5.0dip">
                        <Button 
	                        android:id="@+id/login_btn_login" 
	                        android:layout_width="fill_parent" 
	                        android:layout_height="45dip" 
	                        android:textSize="@dimen/size_20"
	                        android:text="@string/login_submit" 
	                        android:background="@drawable/login_btn_selector" />
                    </LinearLayout>
                </TableLayout>
            </RelativeLayout>
        </ViewSwitcher>
    </ScrollView>
    <ImageButton 
	    android:id="@+id/login_close_button" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/login_scrollview" 
	    android:layout_alignTop="@+id/login_scrollview"
	    android:background="@drawable/login_close_button"  />
</RelativeLayout>
<include layout="@layout/progress"/>
</FrameLayout>