<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/userinfolayout"
	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:visibility="gone">
 	 <ScrollView
	   	android:id="@+id/user_info_scrollview" 
	   	android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:layout_weight="1"
	   	android:scrollbars="vertical"
	   	android:fadingEdge="none">
   	<LinearLayout
   		android:orientation="vertical"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:padding="5.0dip">	
		<RelativeLayout
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content">
    	    <ImageView 
		    	android:id="@+id/user_info_icon"
		      	android:layout_width="70dip" 
		        android:layout_height="70dip"
		        android:scaleType="fitCenter"
		        android:padding="3.0dip"
				android:clickable="true"
		        android:src="@drawable/icon"/>
    	    <ImageView 
		    	android:id="@+id/user_info_sex"
		      	android:layout_width="18dip" 
		        android:layout_height="18dip"
		        android:layout_marginLeft="10.0dip"
		        android:layout_toRightOf="@id/user_info_icon"
	           	android:layout_alignBottom="@id/user_info_icon"
		        android:scaleType="fitCenter"/>
		   	<TextView 
	       		android:id="@+id/user_info_username"  
	    		android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	android:layout_marginBottom="10.0dip"
	           	android:layout_above="@id/user_info_sex"
	           	android:layout_alignLeft="@id/user_info_sex"
	           	android:textSize="14dp"
	            android:textColor="@color/author_text"/>
	    </RelativeLayout>
           <LinearLayout 
          		android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="5.0dip"
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_above_nor">
               <TextView 
               	android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="13dp" 
                android:textStyle="bold" 
                android:textColor="@color/grayslate" 
                android:text="@string/jointime" />
               <TextView 
              		android:id="@+id/user_info_jointime"    
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:layout_marginRight="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="12dp" 
                android:textColor="#ff000000"/>
           </LinearLayout>
           <LinearLayout 
           	android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_mid_nor">
            <TextView 
          			android:layout_width="wrap_content" 
                 	android:layout_height="wrap_content" 
                 	android:layout_marginLeft="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="13dp" 
               	android:textStyle="bold" 
                 	android:textColor="@color/grayslate" 
                 	android:text="@string/age" />
            	<TextView 
              		android:id="@+id/user_info_age" 
                 	android:layout_width="fill_parent" 
                 	android:layout_height="wrap_content" 
                 	android:layout_weight="1"
                 	android:layout_marginRight="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="12dp" 
                 	android:textColor="#ff000000"/>
           </LinearLayout>
        <LinearLayout 
           	android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_mid_nor">
            <TextView 
          			android:layout_width="wrap_content" 
                 	android:layout_height="wrap_content" 
                 	android:layout_marginLeft="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="13dp" 
               	android:textStyle="bold" 
                 	android:textColor="@color/grayslate" 
                 	android:text="@string/mark" />
            	<TextView 
              		android:id="@+id/user_info_mark" 
                 	android:layout_width="fill_parent" 
                 	android:layout_height="wrap_content" 
                 	android:layout_weight="1"
                 	android:layout_marginRight="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="12dp" 
                 	android:textColor="#ff000000"/>
           </LinearLayout>
        <LinearLayout 
           	android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_mid_nor">
            <TextView 
          			android:layout_width="wrap_content" 
                 	android:layout_height="wrap_content" 
                 	android:layout_marginLeft="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="13dp" 
               	android:textStyle="bold" 
                 	android:textColor="@color/grayslate" 
                 	android:text="@string/address" />
            	<TextView 
              		android:id="@+id/user_info_address"
                 	android:layout_width="fill_parent" 
                 	android:layout_height="wrap_content" 
                 	android:layout_weight="1"
                 	android:layout_marginRight="10.0dip" 
                 	android:duplicateParentState="true"
                 	android:textSize="12dp" 
                 	android:textColor="#ff000000"/>
           </LinearLayout>
        <LinearLayout 
           	android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_mid_nor">
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="13dp" 
                android:textStyle="bold" 
                android:textColor="@color/grayslate" 
                android:text="@string/work" />
              	<TextView 
             		android:id="@+id/user_info_work"   
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:layout_marginRight="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="12dp" 
                android:textColor="#ff000000"/>
        </LinearLayout>
         <LinearLayout 
           	android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center_vertical"
            android:focusable="true" 
            android:clickable="true"
            android:background="@drawable/table_below_nor">
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="13dp" 
                android:textStyle="bold" 
                android:textColor="@color/grayslate" 
                android:text="@string/characters" />
              	<TextView 
             	android:id="@+id/user_info_characters"   
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_weight="1"
                android:layout_marginRight="10.0dip" 
                android:duplicateParentState="true"
                android:textSize="12dp" 
                android:textColor="#ff000000"/>
        </LinearLayout>
       </LinearLayout>	
   </ScrollView>
 </LinearLayout>
